--- a/main.html
+++ b/main.html
@@ -1,6 +1,1 @@
-<p id="demo"></p>
-
-<script>
-    // Returns a random integer from 1 to 16:  
-    document.getElementById("demo").innerHTML = Math.floor(Math.random() * 16) + 1;
-</script>
+Quack,Quack2,Quack3
