--- a/main.html
+++ b/main.html
@@ -13,6 +13,6 @@ GoodCoweringPeachKlappa-wStgLPLshYN5kmgc,
 SucculentResoluteMochaOSsloth-Ch-eL8DpiCgDQdjc,
 MoistDifferentPoxAliens-4SjjQ_pt_WMR8ZPX,
 FuriousWonderfulDurianRalpherZ-83U9WEHa934DhV52,
-SuccessfulBitterPizzaSoonerLater-_AE5KsqHxesNE_F-
-RichPoliteSashimiKappaWealth-ROEbO2jhtq5vPlJ7
+SuccessfulBitterPizzaSoonerLater-_AE5KsqHxesNE_F-,
+RichPoliteSashimiKappaWealth-ROEbO2jhtq5vPlJ7,
 SaltyBeautifulCoyoteNomNom-jS_btGnHWBvYjAtN
