Three new songs

--- a/main.html
+++ b/main.html
@@ -19,4 +19,7 @@ SaltyBeautifulCoyoteNomNom-jS_btGnHWBvYjAtN,
 AwkwardFairRadicchioCoolCat-LeWrgm-5y6dFemYP,
 TawdryPlainHamsterStoneLightning-chCsXh0tsa904PLM,
 CarefulCheerfulLorisJKanStyle-HP38SnlYhKoOmgWf,
-WildTenuousStorkDogFace-WDoLqUFOqmgz3DRM
+WildTenuousStorkDogFace-WDoLqUFOqmgz3DRM,
+FaithfulNaiveFinchDatBoi-IJaStdwhhKVpOgUh,
+VictoriousEnjoyableTapirDoritosChip-zTenm6sUdJ51s-X8,
+ShinyKindPotatoAMPEnergyCherry-guoMkhLNdoO9x5WH
